Fix z-index

--- a/src/components/Pwaupbanner/index.scss
+++ b/src/components/Pwaupbanner/index.scss
@@ -12,7 +12,7 @@
     width: 100%;
     max-width: 600px;
     height: 80px;
-    z-index: 4;
+    z-index: 20;
     overflow: hidden;
 
     &.hidden {
